--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClInclude Include="CEBaseTask.h">
       <Filter>Header Files\CPU Engine\Tasks</Filter>
     </ClInclude>
-    <ClInclude Include="CENormPriorsTask.decl.h">
-      <Filter>Header Files\CPU Engine\Tasks</Filter>
-    </ClInclude>
     <ClInclude Include="CENormPriorsTask.fwd.h">
       <Filter>Header Files\CPU Engine\Tasks</Filter>
     </ClInclude>
@@ -145,9 +142,6 @@
       <Filter>Header Files\CPU Engine\Tasks</Filter>
     </ClInclude>
     <ClInclude Include="CETrainTaskNumSpec.h">
-      <Filter>Header Files\CPU Engine\Tasks</Filter>
-    </ClInclude>
-    <ClInclude Include="CEUpdatePriorsTask.decl.h">
       <Filter>Header Files\CPU Engine\Tasks</Filter>
     </ClInclude>
     <ClInclude Include="CEUpdatePriorsTask.fwd.h">
@@ -178,6 +172,15 @@
       <Filter>Header Files\CPU Engine\Subtasks</Filter>
     </ClInclude>
     <ClInclude Include="CENormPriorsSubtaskDiv.h">
+      <Filter>Header Files\CPU Engine\Subtasks</Filter>
+    </ClInclude>
+    <ClInclude Include="CEEvalQsTask.h">
+      <Filter>Header Files\CPU Engine\Tasks</Filter>
+    </ClInclude>
+    <ClInclude Include="CEEvalQsTask.fwd.h">
+      <Filter>Header Files\CPU Engine\Tasks</Filter>
+    </ClInclude>
+    <ClInclude Include="CEEvalQsSubtaskConsider.h">
       <Filter>Header Files\CPU Engine\Subtasks</Filter>
     </ClInclude>
   </ItemGroup>
