--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -207,6 +207,9 @@
     <ClInclude Include="Interface\SRBucketSummatorPar.h">
       <Filter>Header Files\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRBucketSummatorSeq.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
