--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -266,6 +266,7 @@
     <ClInclude Include="Interface\SRTaskWaiter.h" />
     <ClInclude Include="Interface\SRThreadPool.h" />
     <ClInclude Include="Interface\SRUtils.h" />
+    <ClInclude Include="Interface\SRVectMath.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SubtaskCompleter.h" />
     <ClInclude Include="targetver.h" />
