Fixed SRVectMath::Log2Cold() for negative numbers and implemented tests.

--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
@@ -95,6 +95,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <AdditionalOptions>/Qvec-report:1 /Qpar-report:1 %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -115,6 +116,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <AdditionalOptions>/Qvec-report:1 /Qpar-report:1 %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -193,6 +195,7 @@
   <ItemGroup>
     <ClCompile Include="SRBitArrayTest.cpp" />
     <ClCompile Include="SRPlatformTestsMain.cpp" />
+    <ClCompile Include="SRVectMathTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
