--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="SRBitArrayTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRVectMathTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
