Implemented table-based Log2Hot() and tests.

--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -306,6 +306,7 @@
     <ClCompile Include="SRString.cpp" />
     <ClCompile Include="SRThreadPool.cpp" />
     <ClCompile Include="SRUtils.cpp" />
+    <ClCompile Include="SRVectMath.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
