--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="Interface\Exceptions\SRMultiException.h" />
     <ClInclude Include="Interface\Exceptions\SRStdException.h" />
     <ClInclude Include="Interface\ISRLogCustomizable.h" />
+    <ClInclude Include="Interface\SRAccumulator.h" />
     <ClInclude Include="Interface\SRAlignedAllocator.h" />
     <ClInclude Include="Interface\SRAlignedDeleter.h" />
     <ClInclude Include="Interface\SRBasicTypes.h" />
