Implemented the update of priors after recording an answer.

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -210,6 +210,9 @@
     <ClInclude Include="CEQuiz.fwd.h" />
     <ClInclude Include="CEQuiz.decl.h" />
     <ClInclude Include="CEQuiz.h" />
+    <ClInclude Include="CERecordAnswerSubtaskMul.h" />
+    <ClInclude Include="CERecordAnswerTask.fwd.h" />
+    <ClInclude Include="CERecordAnswerTask.h" />
     <ClInclude Include="CETask.fwd.h" />
     <ClInclude Include="CETask.decl.h" />
     <ClInclude Include="CETask.h" />
@@ -248,6 +251,7 @@
     <ClCompile Include="CENormPriorsSubtaskCorrSum.cpp" />
     <ClCompile Include="CENormPriorsSubtaskDiv.cpp" />
     <ClCompile Include="CENormPriorsSubtaskMax.cpp" />
+    <ClCompile Include="CERecordAnswerSubtaskMul.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
     <ClCompile Include="CEUpdatePriorsSubtaskMul.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
