Implemented heapify-based CpuEngine::ListTopTargets() .

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="CEEvalQsSubtaskConsider.h" />
     <ClInclude Include="CEEvalQsTask.fwd.h" />
     <ClInclude Include="CEEvalQsTask.h" />
+    <ClInclude Include="CEHeapifyPriorsSubtaskMake.h" />
     <ClInclude Include="CEHeapifyPriorsTask.h" />
     <ClInclude Include="CEListTopTargetsAlgorithm.h" />
     <ClInclude Include="CENormPriorsSubtaskCorrSum.h" />
@@ -257,6 +258,7 @@
     <ClCompile Include="BaseCpuEngine.cpp" />
     <ClCompile Include="CECreateQuizOperation.cpp" />
     <ClCompile Include="CEEvalQsSubtaskConsider.cpp" />
+    <ClCompile Include="CEHeapifyPriorsSubtaskMake.cpp" />
     <ClCompile Include="CEListTopTargetsAlgorithm.cpp" />
     <ClCompile Include="CENormPriorsSubtaskCorrSum.cpp" />
     <ClCompile Include="CENormPriorsSubtaskMax.cpp" />
