--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj
@@ -194,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SRBitArrayTest.cpp" />
+    <ClCompile Include="SRHeapTest.cpp" />
     <ClCompile Include="SRPlatformTestsMain.cpp" />
     <ClCompile Include="SRVectMathTest.cpp" />
     <ClCompile Include="stdafx.cpp">
