--- a/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
+++ b/ProbQA/SRPlatformTests/SRPlatformTests.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="SRVectMathTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SRHeapTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
